<resources>
    <string name="app_name">Coin Flip</string>
    <string name="coin_flip_title">Coin Flip</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="tap_to_flip">Tap to flip!</string>
    <string name="coin_description">Coin image</string>
    <string name="heads">Heads!</string>
    <string name="tails">Tails!</string>
    <string name="flipping">Flipping…</string>
    <string name="nsfw_mode">NSFW Mode</string>
    <string name="nsfw_mode_active">NSFW mode active</string>
</resources>
